--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <title>Impulso Digital 360 | CL Tech Solutions</title>
 
   <!-- SEO -->
-  <meta name="description" content="Impulso Digital 360 de CL Tech Solutions: página web profesional en 48 horas, lista para vender, con Google Maps, SEO inicial, dominio, hosting y botón de WhatsApp.">
-  <meta name="keywords" content="página web para emprendedores, web profesional, página web Ecuador, CL Tech Solutions, Impulso Digital 360">
+  <meta name="description" content="Impulso Digital 360 de CL Tech Solutions: página web de ventas profesional en 48 horas, lista para cerrar clientes, con Google Maps, SEO inicial, dominio, hosting y botón de WhatsApp.">
+  <meta name="keywords" content="página web para emprendedores, página de ventas, web profesional, página web Ecuador, CL Tech Solutions, Impulso Digital 360">
   <meta name="author" content="CL Tech Solutions">
 
   <!-- OG / Redes -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Impulso Digital 360 | Tu negocio listo para vender en 48 horas">
-  <meta property="og:description" content="Página web profesional + dominio + hosting + Google Maps + SEO inicial + botón de WhatsApp en un solo sistema.">
+  <meta property="og:description" content="Página web de ventas + dominio + hosting + Google Maps + SEO inicial + botón de WhatsApp en un solo sistema.">
   <meta property="og:image" content="URL_DE_TU_PREVIEW" />
   <meta property="og:url" content="https://tudominio.com/impulso-digital-360" />
 
@@ -105,7 +105,7 @@
         <img
           src="https://i.postimg.cc/s2YtHvzB/IMG_0156.png"
           alt="CL Tech Solutions"
-          class="h-46 sm:h-48 md:h-50 lg:h-54 w-auto object-contain drop-shadow-[0_0_35px_rgba(17,215,227,0.7)]"
+          class="h-12 sm:h-14 md:h-16 lg:h-20 w-auto object-contain drop-shadow-[0_0_35px_rgba(17,215,227,0.7)]"
         />
       </a>
 
@@ -118,7 +118,7 @@
         <a href="#formulario" class="text-white/70 hover:text-clturq transition">Aplicar</a>
       </nav>
 
-      <!-- Menú móvil simple (solo icono, sin texto extra) -->
+      <!-- Menú móvil -->
       <button
         id="mobileMenuBtn"
         class="md:hidden inline-flex items-center justify-center w-9 h-9 rounded-full border border-white/15 bg-white/5"
@@ -157,8 +157,9 @@
 
         <p class="text-sm sm:text-base text-white/70 mb-6">
           <strong>Impulso Digital 360</strong> es un programa de una sola vez donde creamos tu
-          <strong>página web profesional</strong> lista para vender: con diseño moderno, Google Maps, SEO inicial,
-          <strong>dominio, hosting</strong> y botón de WhatsApp, sin mensualidades ni complicaciones técnicas.
+          <strong>página web de ventas profesional</strong>, pensada para convertir visitas en mensajes, pedidos
+          y reservas: diseño moderno, Google Maps, SEO inicial, <strong>dominio, hosting</strong> y botón de WhatsApp,
+          sin mensualidades ni complicaciones técnicas.
         </p>
 
         <div class="flex flex-col sm:flex-row gap-3 mb-4">
@@ -175,13 +176,14 @@
         </div>
 
         <p class="text-xs text-white/50">
-          Programa diseñado para pequeños negocios, servicios, emprendimientos y profesionales independientes.
+          Programa diseñado para pequeños negocios, servicios, tiendas, heladerías, comida rápida
+          y profesionales independientes que quieren una página que realmente venda.
         </p>
 
         <div class="mt-6 flex flex-wrap gap-3 text-[11px] text-white/60">
           <div class="px-3 py-1 rounded-full border border-white/10 bg-white/5">Entrega en 48 horas</div>
           <div class="px-3 py-1 rounded-full border border-white/10 bg-white/5">Pago único: sin mensualidades</div>
-          <div class="px-3 py-1 rounded-full border border-white/10 bg-white/5">Página web responsive</div>
+          <div class="px-3 py-1 rounded-full border border-white/10 bg-white/5">Página web de ventas responsive</div>
         </div>
       </div>
 
@@ -194,9 +196,9 @@
           <h2 class="text-xl font-semibold mb-3">Lo que tendrás en 48 horas</h2>
 
           <ul class="space-y-2 text-sm text-white/80 mb-4">
-            <li>• Página web profesional (estructura de una sola página con secciones de inicio, servicios y contacto).</li>
-            <li>• Diseño adaptado a tu marca y tipo de negocio.</li>
-            <li>• Botón directo a tu WhatsApp con mensaje predefinido.</li>
+            <li>• Página web de ventas profesional (estructura de una sola página con secciones de inicio, beneficios, oferta y contacto).</li>
+            <li>• Diseño adaptado a tu marca y tipo de negocio, enfocado en cerrar clientes.</li>
+            <li>• Botón directo a tu WhatsApp con mensaje predefinido para que la conversación empiece lista para vender.</li>
             <li>• Google Maps integrado para que te encuentren fácil.</li>
             <li>• SEO inicial para que Google empiece a reconocer tu marca.</li>
             <li>• Dominio y hosting incluidos, tú no te preocupas por lo técnico.</li>
@@ -210,7 +212,7 @@
               <p class="text-[11px] text-white/50">Pago único. Sin mensualidades. Sin letras pequeñas.</p>
             </div>
 
-            <!-- Los chips ahora llevan al formulario -->
+            <!-- Chips que llevan al formulario -->
             <div class="flex flex-col items-end gap-1 text-[11px] text-white/60">
               <a
                 href="#formulario"
@@ -236,21 +238,21 @@
     <div class="max-w-6xl mx-auto px-4 sm:px-6">
       <h2 class="text-2xl md:text-3xl font-semibold mb-3">¿Por qué Impulso Digital 360 cambia el juego?</h2>
       <p class="text-white/70 text-sm md:text-base mb-8 max-w-2xl">
-        No es “solo una página web”. Es la base mínima profesional para que tu negocio deje de perder clientes
-        por no existir en Internet. Diseñamos la web pensando en que vendas, no en que se vea bonita solamente.
+        No es “solo una página web”. Es una <strong>página de ventas</strong> diseñada para que tus clientes entiendan
+        rápido qué ofreces, confíen en ti y den el siguiente paso: escribirte, pedir información, reservar o hacer un pedido.
       </p>
 
       <div class="grid md:grid-cols-3 gap-6">
         <div class="p-5 rounded-2xl border border-white/10 bg-white/5 hover:border-clturq/60 hover:-translate-y-1 transition">
           <h3 class="text-sm font-semibold mb-2 text-clturq">Presencia profesional inmediata</h3>
           <p class="text-sm text-white/70">
-            Tus clientes podrán ver quién eres, qué ofreces, dónde estás y cómo contactarte en un solo lugar.
+            Tus clientes podrán ver quién eres, qué ofreces, dónde estás y cómo comprarte en un solo lugar.
           </p>
         </div>
         <div class="p-5 rounded-2xl border border-white/10 bg-white/5 hover:border-clturq/60 hover:-translate-y-1 transition">
-          <h3 class="text-sm font-semibold mb-2 text-clturq">Pensado para vender</h3>
+          <h3 class="text-sm font-semibold mb-2 text-clturq">Texto y estructura para vender</h3>
           <p class="text-sm text-white/70">
-            Estructura basada en llamada a la acción, claridad y confianza para que los visitantes te escriban o te compren.
+            Estructura basada en llamada a la acción, beneficios claros y botones estratégicos que terminan en WhatsApp o pedido.
           </p>
         </div>
         <div class="p-5 rounded-2xl border border-white/10 bg-white/5 hover:border-clturq/60 hover:-translate-y-1 transition">
@@ -273,13 +275,13 @@
 
       <div class="grid md:grid-cols-2 gap-8">
         <div class="space-y-3 text-sm text-white/80">
-          <h3 class="text-sm font-semibold text-clturq">Página web profesional</h3>
+          <h3 class="text-sm font-semibold text-clturq">Página web de ventas profesional</h3>
           <ul class="space-y-1">
-            <li>• Estructura de una sola página con secciones: inicio, servicios/productos y contacto.</li>
+            <li>• Estructura de una sola página con secciones: inicio, beneficios, oferta y contacto.</li>
             <li>• Diseño moderno, limpio y adaptable a celular, tablet y computador.</li>
             <li>• Carga de hasta 10 fotos de tu negocio.</li>
             <li>• Colores alineados a tu marca o rubro.</li>
-            <li>• Textos base redactados de forma persuasiva.</li>
+            <li>• Textos base redactados de forma persuasiva para empujar a la acción.</li>
             <li>• Dominio y hosting incluidos y configurados por nosotros.</li>
           </ul>
 
@@ -333,7 +335,7 @@
         <div class="rounded-2xl border border-white/10 bg-white/5 p-4">
           <p class="text-xs text-white/50 mb-1">Paso 3</p>
           <h3 class="font-semibold mb-1 text-clturq">Diseño & montaje</h3>
-          <p class="text-white/70">En máximo 48 horas construimos tu página web y la dejamos funcionando.</p>
+          <p class="text-white/70">En máximo 48 horas construimos tu página web de ventas y la dejamos funcionando.</p>
         </div>
         <div class="rounded-2xl border border-white/10 bg-white/5 p-4">
           <p class="text-xs text-white/50 mb-1">Paso 4</p>
@@ -349,7 +351,7 @@
     <div class="max-w-6xl mx-auto px-4 sm:px-6">
       <h2 class="text-2xl md:text-3xl font-semibold mb-3">Inversión: simple, clara y sin letras pequeñas</h2>
       <p class="text-white/70 text-sm md:text-base mb-4 max-w-2xl">
-        Impulso Digital 360 es un programa de <strong>pago único</strong>. Pagas una vez, obtienes tu página web y
+        Impulso Digital 360 es un programa de <strong>pago único</strong>. Pagas una vez, obtienes tu página web de ventas y
         luego puedes decidir si quieres seguir creciendo con planes mensuales de automatización y contenido.
       </p>
 
@@ -374,8 +376,8 @@
           <p class="text-3xl font-bold text-clturq mb-1">$97<span class="text-sm text-white/50"> USD</span></p>
           <p class="text-xs text-white/50 mb-4">Pago único · Sin mensualidades · Dominio y hosting incluidos.</p>
 
-          <ul class="text-sm text-white/80 space-y-1 mb-5">
-            <li>• Página web profesional de una sola página con secciones internas.</li>
+          <ul class="text-sm text-white/80 space-y-1 mb-4">
+            <li>• Página web de ventas profesional de una sola página con secciones internas.</li>
             <li>• Diseño adaptado a tu negocio y rubro.</li>
             <li>• Google Maps y SEO inicial.</li>
             <li>• Botón a WhatsApp con mensaje preconfigurado.</li>
@@ -383,9 +385,30 @@
             <li>• Soporte inicial por 30 días.</li>
           </ul>
 
+          <!-- Modelos incluidos -->
+          <p class="text-sm font-semibold text-clturq mt-4 mb-1">Modelos que puedes elegir por el mismo valor:</p>
+          <ul class="text-sm text-white/80 space-y-1 mb-5">
+            <li>
+              • <strong>Modelo Servicios Expertos:</strong> página de ventas para coaches, abogados,
+              médicos, consultores, academias, etc., con secciones de presentación, servicios, testimonios y contacto.
+            </li>
+            <li>
+              • <strong>Modelo Catálogo Express (hasta 20 productos):</strong> ideal para tiendas pequeñas,
+              heladerías, tiendas de ropa o accesorios. Incluye listado de hasta 20 productos, selección de producto,
+              pequeño carrito/resumen de pedido, datos de entrega a domicilio y pedido directo al WhatsApp.
+            </li>
+            <li>
+              • <strong>Modelo Menú Digital:</strong> pensado para hamburgueserías, locales de papas, comida rápida
+              y cafeterías. Muestra combos, fotos, precios, ubicación y botón “Pedir ahora por WhatsApp”.
+            </li>
+            <li>
+              • <strong>Modelo Reservas & Citas:</strong> para spas, salones de belleza, clínicas, barberos, etc.,
+              con secciones de servicios, horarios, formulario de contacto y mapa para llegar.
+            </li>
+          </ul>
+
           <p class="text-xs text-white/50 mb-4">
-            Este es el primer paso para tener presencia profesional. A partir de aquí, si tu negocio lo requiere,
-            puedes añadir automatización avanzada con nuestros planes mensuales.
+            En todos los casos la estructura y los textos se diseñan pensando en cerrar ventas, no solo informar.
           </p>
 
           <button
@@ -494,7 +517,7 @@
             <span class="text-clturq group-open:rotate-180 transition">▼</span>
           </summary>
           <p class="mt-3 text-white/70">
-            No. Este programa incluye tu página web profesional, botón a WhatsApp y una guía básica para mensajes de bienvenida.
+            No. Este programa incluye tu página web de ventas, botón a WhatsApp y una guía básica para mensajes de bienvenida.
             La automatización avanzada (API, n8n, IA, chatbot) se contrata aparte con los planes mensuales.
           </p>
         </details>
@@ -591,7 +614,7 @@
 
   <!-- BOTÓN FLOTANTE DE WHATSAPP -->
   <a
-    href="https://wa.me/593999630862?text=Hola%2C%20estoy%20interesado%2Fa%20en%20el%20programa%20Impulso%20Digital%20360%20de%20CL%20Tech%20Solutions.%20Quisiera%20hablar%20con%20un%20asesor%20para%20que%20me%20explique%20mejor%20los%20planes%2C%20lo%20que%20incluyen%20y%20los%20siguientes%20pasos.%20Vengo%20desde%20la%20p%C3%A1gina%20web."
+    href="https://wa.me/593999630862?text=Hola%2C%20estoy%20interesado%2Fa%20en%20el%20programa%20Impulso%20Digital%20360%20de%20CL%20Tech%20Solutions.%20Quisiera%20hablar%20con%20un%20asesor%20para%20que%20me%20explique%20mejor%20los%20planes%2C%20los%20modelos%20de%20p%C3%A1ginas%20de%20ventas%20y%20los%20siguientes%20pasos.%20Vengo%20desde%20la%20p%C3%A1gina%20web."
     target="_blank"
     rel="noopener noreferrer"
     class="btn-whatsapp-float"
