--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
           <div class="flex flex-col sm:flex-row gap-3">
             <a
-              href="https://chrislombeida.com"
+              href="https://www.crisslombeida.com"
               target="_blank"
               class="inline-flex items-center justify-center px-6 py-3 text-sm font-semibold rounded-full bg-clturq text-clblack shadow-[0_18px_60px_rgba(17,215,227,0.95)] hover:-translate-y-[2px] hover:shadow-[0_24px_80px_rgba(17,215,227,1)] active:translate-y-0 active:shadow-none transition">
               Ver directorio de emprendedores
@@ -401,7 +401,7 @@
           <!-- LOGO CRISS LOMBEIDA (REEMPLAZA LA URL) -->
           <div class="rounded-3xl border border-white/15 bg-black/60 px-6 py-8 w-full flex flex-col items-center text-center shadow-[0_20px_70px_rgba(0,0,0,0.9)]">
             <img
-              src="URL_DEL_LOGO_CRISS"
+              src="https://i.postimg.cc/7b8H1Rbm/IMG_0310_removebg_preview.png"
               alt="Criss Lombeida"
               class="h-14 sm:h-16 md:h-20 w-auto object-contain mb-4"
             />
