--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
               a emprendedores que tal vez nunca hubieran podido pagar una.
             </p>
             <a
-              href="https://chrislombeida.com"
+              href="https://www.crisslombeida.com"
               target="_blank"
               class="inline-flex items-center justify-center px-5 py-2.5 text-xs font-semibold rounded-full bg-clturq/10 text-clturq border border-clturq/60 hover:bg-clturq hover:text-clblack transition">
               Ver historias completas en Criss Lombeida
