--- a/index.html
+++ b/index.html
@@ -5,17 +5,153 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Impulso Digital 360 | CL Tech Solutions</title>
 
-  <!-- SEO -->
-  <meta name="description" content="Impulso Digital 360 de CL Tech Solutions: páginas web de venta para servicios, restaurantes y catálogos de productos. Dominio y hosting 1 año incluidos.">
-  <meta name="keywords" content="página web para emprendedores, web profesional, página para restaurantes, catálogo online, CL Tech Solutions, Impulso Digital 360">
+  <!-- SEO básico -->
+  <meta name="description" content="Impulso Digital 360 de CL Tech Solutions: páginas web de ventas económicas por $97 USD para emprendedores, servicios, restaurantes y catálogos de productos en Ecuador. Incluye dominio y hosting 1 año." />
+  <meta name="keywords" content="páginas web para emprendedores, página web económica 97 dólares, página web de ventas Ecuador, página web para restaurantes, catálogo online para negocios pequeños, páginas web en Shushufindi, páginas web Sucumbíos, páginas web para negocios locales, CL Tech Solutions, Impulso Digital 360" />
   <meta name="author" content="CL Tech Solutions">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://www.crisslombeida.com/impulso-digital-360" />
 
   <!-- OG / Redes -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Impulso Digital 360 | Tu página web de ventas en 48 horas" />
-  <meta property="og:description" content="Crea tu página web de ventas para servicios, restaurantes o catálogo de productos. Dominio y hosting 1 año incluidos por solo $97." />
-  <meta property="og:image" content="URL_DE_TU_PREVIEW" />
-  <meta property="og:url" content="https://tudominio.com/impulso-digital-360" />
+  <meta property="og:title" content="Impulso Digital 360 | Tu página web de ventas por $97 USD" />
+  <meta property="og:description" content="Crea tu página web de ventas por $97 USD para servicios, restaurantes o catálogo de productos con CL Tech Solutions. Dominio y hosting 1 año incluidos." />
+  <meta property="og:image" content="https://i.postimg.cc/s2YtHvzB/IMG_0156.png" />
+  <meta property="og:url" content="https://www.crisslombeida.com/impulso-digital-360" />
+  <meta property="og:site_name" content="CL Tech Solutions" />
+
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Impulso Digital 360 | Páginas web de ventas para emprendedores" />
+  <meta name="twitter:description" content="Programa Impulso Digital 360: páginas web de ventas por $97 USD para emprendedores, con dominio, hosting y botón directo a WhatsApp." />
+  <meta name="twitter:image" content="https://i.postimg.cc/s2YtHvzB/IMG_0156.png" />
+
+  <!-- Datos estructurados JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Organization",
+        "@id": "https://www.crisslombeida.com/#organization",
+        "name": "CL Tech Solutions",
+        "legalName": "CL Tech Solutions",
+        "url": "https://www.crisslombeida.com/",
+        "logo": "https://i.postimg.cc/s2YtHvzB/IMG_0156.png",
+        "description": "Empresa ecuatoriana ubicada en Shushufindi, Sucumbíos, dedicada a la distribución y venta de páginas web económicas de ventas desde 97 USD para emprendedores y pequeños negocios.",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Shushufindi",
+          "addressRegion": "Sucumbíos",
+          "addressCountry": "EC"
+        },
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+593999630862",
+          "contactType": "customer service",
+          "areaServed": "EC"
+        },
+        "sameAs": []
+      },
+      {
+        "@type": "ProfessionalService",
+        "@id": "https://www.crisslombeida.com/impulso-digital-360#localbusiness",
+        "name": "CL Tech Solutions - Impulso Digital 360",
+        "url": "https://www.crisslombeida.com/impulso-digital-360",
+        "image": "https://i.postimg.cc/s2YtHvzB/IMG_0156.png",
+        "priceRange": "$$",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Shushufindi",
+          "addressRegion": "Sucumbíos",
+          "addressCountry": "EC"
+        },
+        "telephone": "+593999630862",
+        "areaServed": [
+          "Shushufindi",
+          "Sucumbíos",
+          "Amazonía ecuatoriana",
+          "Ecuador"
+        ],
+        "description": "Programa Impulso Digital 360 de CL Tech Solutions: diseño y desarrollo de páginas web de ventas económicas por 97 USD para servicios, restaurantes y catálogos de productos con dominio y hosting incluidos por 1 año."
+      },
+      {
+        "@type": "WebSite",
+        "@id": "https://www.crisslombeida.com/#website",
+        "url": "https://www.crisslombeida.com/",
+        "name": "Criss Lombeida · CL Tech Solutions",
+        "description": "Plataforma del proyecto Criss Lombeida y CL Tech Solutions para impulsar a emprendedores con páginas web de ventas y automatización digital.",
+        "inLanguage": "es-EC"
+      },
+      {
+        "@type": "WebPage",
+        "@id": "https://www.crisslombeida.com/impulso-digital-360#webpage",
+        "url": "https://www.crisslombeida.com/impulso-digital-360",
+        "name": "Impulso Digital 360 | Páginas web de ventas por 97 USD para emprendedores en Ecuador",
+        "description": "Página oficial del programa Impulso Digital 360 de CL Tech Solutions: páginas web de ventas económicas por 97 USD para servicios, restaurantes y catálogos de productos, con dominio y hosting incluidos por 1 año.",
+        "isPartOf": {
+          "@id": "https://www.crisslombeida.com/#website"
+        },
+        "inLanguage": "es-EC"
+      },
+      {
+        "@type": "Service",
+        "@id": "https://www.crisslombeida.com/impulso-digital-360#service",
+        "serviceType": "Diseño de páginas web de ventas",
+        "provider": {
+          "@id": "https://www.crisslombeida.com/#organization"
+        },
+        "areaServed": "Ecuador",
+        "description": "Servicio de creación de páginas web de ventas por 97 USD con tres modelos: servicios profesionales, restaurantes/comida y catálogos de hasta 20 productos. Incluye dominio, hosting, botón a WhatsApp y Google Maps.",
+        "offers": {
+          "@type": "Offer",
+          "price": "97",
+          "priceCurrency": "USD",
+          "availability": "https://schema.org/InStock"
+        }
+      },
+      {
+        "@type": "FAQPage",
+        "@id": "https://www.crisslombeida.com/impulso-digital-360#faq",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "¿Qué incluye el programa Impulso Digital 360 por 97 USD?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Incluye el diseño y desarrollo de una página web de ventas de una sola página, dominio y hosting por 1 año, integración con Google Maps, botón directo a WhatsApp con mensaje predefinido, SEO inicial y soporte básico durante 30 días después de la entrega."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "¿En cuánto tiempo entregan mi página web de ventas?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "La página se entrega en un plazo máximo de 48 horas después de recibir la información básica de tu negocio, como textos, datos de contacto, logo y fotos si las tienes."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "¿Atienden solo en Shushufindi o en todo Ecuador?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "CL Tech Solutions atiende a emprendedores y negocios de todo Ecuador. La comunicación y la entrega se realizan de forma digital, principalmente por WhatsApp y correo electrónico."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "¿Necesito tener logo o fotos profesionales para empezar?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "No es obligatorio tener logo o fotos profesionales. Si ya los tienes, los integramos en tu página. Si no, podemos trabajar con un diseño limpio y genérico mientras avanzas con tu identidad visual."
+            }
+          }
+        ]
+      }
+    ]
+  }
+  </script>
 
   <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -670,9 +806,9 @@
       btn.addEventListener("click", () => {
         const plan = btn.getAttribute("data-plan");
         const texto =
-          "Hola, ya tengo (o quiero tener) mi página con el programa Impulso Digital 360 y estoy interesado en el plan mensual \"" +
+          "Hola, ya tengo (o quiero tener) mi página con el programa Impulso Digital 360 y estoy interesado en el plan mensual " +
           plan +
-          "\" para automatizar mi negocio. ¿Me pueden dar más detalles?";
+          " para automatizar mi negocio. ¿Me pueden dar más detalles?";
         const url = WA_BASE + "?text=" + encodeURIComponent(texto);
         window.open(url, "_blank");
       });
@@ -757,7 +893,7 @@
           const distance=Math.sqrt(dx*dx+dy*dy);
           if(distance<config.lineDistance){
             const opacity=1-(distance/config.lineDistance);
-            ctx.strokeStyle=`rgba(17,215,227,${opacity*0.28})`;
+            ctx.strokeStyle='rgba(17,215,227,'+(opacity*0.28)+')';
             ctx.lineWidth=1;
             ctx.beginPath();
             ctx.moveTo(particlesArray[a].x,particlesArray[a].y);
